@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.7.1
 ====================================
+- [#5947] Fix issue with Profile with unauthenticated users
 - [#5979] Fix issue with ConfirmRegister and non-FURL sites
 - [#5734] Add &allowedFields to Register to allow restricting of submitted fields to a specific set
 - [#6010] Fix typo in UpdateProfile mismatching ID of profile to internalKey
